--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
     </script>
   </head>
   <body>
+    <div id="flor">
+      <a href="https://nmenos1.webflow.io" >
+        <img src="/public/florNegra.png">
+      </a>
+    </div>
     <div class="contentp">
       <div class="logo">
         <img id="logoAngel" src=" public/logo.png" alt:"angel">
